--- a/app/views/overview/index.html.erb
+++ b/app/views/overview/index.html.erb
@@ -1,9 +1,9 @@
-<h3 class="font-bold text-2xl">stocks</h3>
+<!-- <h3 class="font-bold text-2xl">stocks</h3>
 
-<%= @portfolio_value %>
+<% @portfolio_value %>
 
 <details>
-  <summary>
+  <summary class="opacity-0 hover:opacity-100">
     debug info
   </summary>
   <details>
@@ -30,4 +30,19 @@
       <%= debug @changes if @changes %>
     </p>
   </details>
-</details>
+</details> -->
+
+<!-- <div class="grid grid-cols-1 grid-rows-4 h-full">
+  <div class="row-start-1 row-end-2">
+    <iframe src="https://cnn.com"></iframe>
+  </div>
+  <div class="row-start-2 row-end-3">
+    <iframe src="https://www.cnn.com/" height="100%" width="100%"></iframe>
+  </div>
+  <div class="row-start-3 row-end-4">
+
+  </div>
+  <div class="row-start-4 row-end-5">
+
+  </div>
+</div> -->
