--- a/app/views/overview/index.html.erb
+++ b/app/views/overview/index.html.erb
@@ -1,3 +1,7 @@
+<div class="h-full w-full py-1">
+  <%= render "tradingview" %>
+</div>
+
 <!-- <h3 class="font-bold text-2xl">stocks</h3>
 
 <% @portfolio_value %>
@@ -32,12 +36,16 @@
   </details>
 </details> -->
 
+<!-- <div class="w-full h-full">
+  <iframe src="https://s.tradingview.com/widgetembed/?frameElementId=tradingview_17343&symbol=GOOG&interval=D&symboledit=1&saveimage=1&toolbarbg=E4E8EB&studies=%5B%5D&studies_overrides=%7B%7D&overrides=%7B%7D&enabled_features=%5B%5D&disabled_features=%5B%5D&utm_source=www.multicharts.com&utm_medium=widget&utm_campaign=chart&utm_term=GOOG" width="100%" height="100%"></iframe>
+</div> -->
+
 <!-- <div class="grid grid-cols-1 grid-rows-4 h-full">
   <div class="row-start-1 row-end-2">
-    <iframe src="https://cnn.com"></iframe>
+    <iframe src="https://www.nytimes.com/"></iframe>
   </div>
   <div class="row-start-2 row-end-3">
-    <iframe src="https://www.cnn.com/" height="100%" width="100%"></iframe>
+    <iframe src="" height="100%" width="100%"></iframe>
   </div>
   <div class="row-start-3 row-end-4">
 
