--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
       <!-- Markets closed: refresh every 60 minutes! -->
       <meta http-equiv="refresh" content="3600">
     <% else %>
-      <!-- Markets closed: refresh every 5 minutes! -->
+      <!-- Markets not closed: refresh every 5 minutes! -->
       <meta http-equiv="refresh" content="300">
     <% end %>
     <%= csrf_meta_tags %>
