--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,11 @@
     </main>
     <% if @quotes.first.iex_last_updated %>
       <div class="text-center bg-black text-slate-400 font-mono py-1">
-        <p>quotes last updated <%= local_time_ago(Time.strptime(@quotes.first.iex_last_updated.to_s,'%Q')) %></p>
+        <% unless @quotes.first.latest_source == "Close" %>
+          <p>quotes last updated <%= local_time_ago(Time.strptime(@quotes.first.iex_last_updated.to_s,'%Q')) %></p>
+        <% else %>
+          <p>markets closed — last updated <%= local_time_ago(Time.strptime(@quotes.first.iex_last_updated.to_s,'%Q')) %></p>
+        <% end %>
       </div>
     <% end %>
     <div class="marquee">
